# memory-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: basic_usage.py
memory_mcp/: __init__.py  __main__.py  server.py  store.py
tests/: test_store.py
